# cpzlib

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: cpzlib.hh
subprojects/: celero.wrap  dbg.wrap  doctest.wrap  fastor.wrap  pdqsort.wrap  rapidcheck.wrap  robin_hood.wrap
subprojects/packagefiles/dbg/: meson.build
subprojects/packagefiles/pdqsort/: meson.build
subprojects/packagefiles/robin_hood/: meson.build
test/: cpzlib_benchmarks.cc  cpzlib_test.cc
